--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.8",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
