--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "antd": "^5.0.1",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
