--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-simple-image-viewer": "^1.2.2",
